--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:onClick="sendOnChannel2"
         android:text="Send on Channel 2" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="deleteNotificationChannels"
+        android:text="Delete channels" />
 </LinearLayout>
